--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
+<html>
+<head>
+ <link rel="stylesheet" href="css.css">  
   <script></script>
   <meta http-equiv="Content-Type" content="text/html; charset=utf8"><title>Configuration-Related Bugs : Empirical Study</title>
   <link rel="stylesheet" href="main.css">
   </head>
 <body>
 <hr>
-<h2>An Empirical Study on Configuration-Related Code Weaknesses<br></h2>
+<h2 style="text-align: center;"> Detecting bugs each new version of the Configurable System<br></h2>
 <hr>
 
 <h3>Overview</h3>
@@ -20,10 +22,10 @@ Next we present the main results of this paper.
 <br><br>
 <div class="centered">
 
-<p><b>Table I</b><br>
+
 </p>
 
-<table class="results" cellspacing="0" cellpadding="0">
+<table class="blueTable" cellspacing="0" cellpadding="0">
 	<tr align="center" bgcolor="black">
 		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE (fixed)&nbsp;&nbsp;&nbsp;</font></td>
@@ -170,7 +172,45 @@ Next we present the main results of this paper.
 </table>
 
 
+<p><b>Pull Requests</b><br>
 
+<table class="blueTable" cellspacing="0" cellpadding="0">
+	<tr align="center" bgcolor="black">
+		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;</font></td>
+	</tr>
 
+	<tr align="center" class="odd">
+		<td>FreeTDS</td>
+		<td><a href="">/src/pool/member.c</a></td>
+		<td></td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>Expat</td>
+		<td><a href="">/src/pool/member.c</a></td>
+		<td></td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>FVWM3</td>
+		<td><a href="">/src/pool/member.c</a></td>
+		<td></td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>LibPNG</td>
+		<td><a href="">/src/pool/member.c</a></td>
+		<td></td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>LibPNG</td>
+		<td><a href="">/src/pool/member.c</a></td>
+		<td></td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>LibPNG</td>
+		<td><a href="">/src/pool/member.c</a></td>
+		<td></td>	
+	</tr>
+</table>
 
 </body></html>
