--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf8"><title>Configuration-Related Bugs : Empirical Study</title>
-  <link rel="stylesheet" href="main.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf8">
   </head>
 <body>
 <hr>
