--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta http-equiv="Content-Type" content="text/html; charset=utf8">
-      <link rel="stylesheet" type="text/css" href="css.css">  
+      <link rel="stylesheet" type="text/css" href="style.css">  
   </head>
 <body>
 <hr>
