--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-  <head>
-      <script></script>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link rel="stylesheet" type="text/css" href="style.css">  
+<head>
+ <link rel="stylesheet" href="css.css">  
+  <script></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf8"><title>Configuration-Related Bugs : Empirical Study</title>
+  <link rel="stylesheet" href="main.css">
   </head>
 <body>
 <hr>
@@ -31,15 +30,15 @@ Next we present the main results of this paper.
 		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE (fixed)&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;LINE (not fixed)&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;HOW LONG&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;HOW OLD&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;CWE&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;FEATURE FLAGS&nbsp;&nbsp;&nbsp;</font></td>
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td><a href="">/src/apps/datacopy.c</a></td>
-		<td></td>
-		<td></td>
+		<td><a href="https://github.com/FreeTDS/freetds/blob/fa45dcb1e9b78a72be43d5ff4a241fc3064209a6/src/apps/datacopy.c#L669">669 </a></td>
+		<td><a href="https://github.com/FreeTDS/freetds/commit/a6cdb2c4b0a7b44a5a3bdf293d3032b514ce6cb7">17 Mar 2015 </a></td>
 		<td>476</td>
 		<td>1</td>	
 	</tr>
