--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
- <link rel="stylesheet" href="css.css">  
-  <script></script>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf8"><title>Configuration-Related Bugs : Empirical Study</title>
-  <link rel="stylesheet" href="main.css">
+      <script></script>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" type="text/css" href="style.css">  
   </head>
 <body>
 <hr>
