--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
+ <head>
       <script></script>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,15 +29,17 @@ Next we present the main results of this paper.
 <table class="blueTable" cellspacing="0" cellpadding="0">
 	<tr align="center" bgcolor="black">
 		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE (fixed)&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;LINE (not fixed)&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;HOW OLD&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;FIXED&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;DETECTED&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;ADDED&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;CWE&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;FEATURE FLAGS&nbsp;&nbsp;&nbsp;</font></td>
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/apps/datacopy.c</a></td>
+		<td>src/apps/datacopy.c</td>
+		<td><a href="">date</a></td>
 		<td><a href="https://github.com/FreeTDS/freetds/blob/fa45dcb1e9b78a72be43d5ff4a241fc3064209a6/src/apps/datacopy.c#L669">669 </a></td>
 		<td><a href="https://github.com/FreeTDS/freetds/commit/a6cdb2c4b0a7b44a5a3bdf293d3032b514ce6cb7">17 Mar 2015 </a></td>
 		<td>476</td>
@@ -45,7 +47,8 @@ Next we present the main results of this paper.
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/apps/datacopy.c</a></td>
+		<td>src/apps/datacopy.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -54,7 +57,8 @@ Next we present the main results of this paper.
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/apps/tsql.c</a></td>
+		<td>src/apps/tsql.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -63,7 +67,8 @@ Next we present the main results of this paper.
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/apps/tsql.c</a></td>
+		<td>src/apps/tsql.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -71,7 +76,8 @@ Next we present the main results of this paper.
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/apps/tsql.c</a></td>
+		<td>src/apps/tsql.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -79,16 +85,8 @@ Next we present the main results of this paper.
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/apps/tsql.c</a></td>
-		<td></td>
-		<td></td>
-		<td>476</td>
-		<td>1</td>	
-	</tr>
-
-	<tr align="center" class="odd">
-		<td>FreeTDS</td>
-		<td><a href="">/src/apps/tsql.c</a></td>
+		<td>src/apps/tsql.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -97,31 +95,8 @@ Next we present the main results of this paper.
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/ctlib/ct.c</a></td>
-		<td></td>
-		<td></td>
-		<td>476</td>
-		<td>1</td>	
-	</tr>
-	<tr align="center" class="odd">
-		<td>FreeTDS</td>
-		<td><a href="">/src/ctlib/ct.c</a></td>
-		<td></td>
-		<td></td>
-		<td>476</td>
-		<td>1</td>	
-	</tr>
-	<tr align="center" class="odd">
-		<td>FreeTDS</td>
-		<td><a href="">/src/ctlib/ct.c</a></td>
-		<td></td>
-		<td></td>
-		<td>476</td>
-		<td>1</td>	
-	</tr>
-	<tr align="center" class="odd">
-		<td>FreeTDS</td>
-		<td><a href="">/src/ctlib/ct.c</a></td>
+		<td>src/apps/tsql.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -130,7 +105,8 @@ Next we present the main results of this paper.
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/ctlib/ct.c</a></td>
+		<td>src/ctlib/ct.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -138,7 +114,8 @@ Next we present the main results of this paper.
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/dblib/dbpivot.c</a></td>
+		<td>src/ctlib/ct.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -146,7 +123,17 @@ Next we present the main results of this paper.
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/dblib/dbpivot.c</a></td>
+		<td>src/ctlib/ct.c</td>
+		<td><a href="">date</a></td>
+		<td></td>
+		<td></td>
+		<td>476</td>
+		<td>1</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>FreeTDS</td>
+		<td>src/ctlib/ct.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -155,7 +142,26 @@ Next we present the main results of this paper.
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/pool/member.c</a></td>
+		<td>src/ctlib/ct.c</td>
+		<td><a href="">date</a></td>
+		<td></td>
+		<td></td>
+		<td>476</td>
+		<td>1</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>FreeTDS</td>
+		<td>src/dblib/dbpivot.c</td>
+		<td><a href="">date</a></td>
+		<td></td>
+		<td></td>
+		<td>476</td>
+		<td>1</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td>FreeTDS</td>
+		<td>src/dblib/dbpivot.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
@@ -164,7 +170,18 @@ Next we present the main results of this paper.
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
-		<td><a href="">/src/pool/member.c</a></td>
+		<td>src/pool/member.c</td>
+		<td><a href="">date</a></td>
+		<td></td>
+		<td></td>
+		<td>476</td>
+		<td>1</td>	
+	</tr>
+
+	<tr align="center" class="odd">
+		<td>FreeTDS</td>
+		<td>src/pool/member.c</td>
+		<td><a href="">date</a></td>
 		<td></td>
 		<td></td>
 		<td>476</td>
