--- a/index.html
+++ b/index.html
@@ -30,204 +30,276 @@ Next we present the main results of this paper.
 	<tr align="center" bgcolor="black">
 		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;FIXED&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">FEATURE FLAGS</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;DETECTED&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;ADDED&nbsp;&nbsp;&nbsp;</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;CWE&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;FEATURE FLAGS&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;</font></td>
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/datacopy.c</td>
-		<td><a href="">date</a></td>
-		<td><a href="https://github.com/FreeTDS/freetds/blob/fa45dcb1e9b78a72be43d5ff4a241fc3064209a6/src/apps/datacopy.c#L669">669 </a></td>
-		<td><a href="https://github.com/FreeTDS/freetds/commit/a6cdb2c4b0a7b44a5a3bdf293d3032b514ce6cb7">17 Mar 2015 </a></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/datacopy.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/tsql.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>		
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/tsql.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/tsql.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/tsql.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/apps/tsql.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/ctlib/ct.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/ctlib/ct.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/ctlib/ct.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/ctlib/ct.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/ctlib/ct.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/dblib/dbpivot.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/dblib/dbpivot.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/pool/member.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
 
 	<tr align="center" class="odd">
 		<td>FreeTDS</td>
 		<td>src/pool/member.c</td>
-		<td><a href="">date</a></td>
-		<td></td>
-		<td></td>
+		<td>0</td>
+		<td>10 Oct 2017</a></td>
 		<td>476</td>
-		<td>1</td>	
+		<td>FIXED</td>	
 	</tr>
+	
+	<tr align="center" class="odd">
+		<td>Mozilla / LPCNet</td>
+		<td>src/lpcnet.c </td>
+		<td>0</td>
+		<td>x</a></td>
+		<td>476</td>
+		<td>ACCEPTED by e-mail</td>	
+	</tr>
+
+	<tr align="center" class="odd">
+		<td>Mozilla / LPCNet</td>
+		<td>src/lpcnet.c </td>
+		<td>0</td>
+		<td>x</a></td>
+		<td>476</td>
+		<td>ACCEPTED by e-mail</td>	
+	</tr>
+
+	<tr align="center" class="odd">
+		<td>Mozilla / LPCNet</td>
+		<td>src/lpcnet_enc.c </td>
+		<td>0</td>
+		<td>X</a></td>
+		<td>476</td>
+		<td>ACCEPTED by e-mail</td>	
+	</tr>	
 </table>
 
 
-<p><b>Pull Requests</b><br>
+<p><b>Pull Requests / LGTM</b><br>
 
 <table class="blueTable" cellspacing="0" cellpadding="0">
 	<tr align="center" bgcolor="black">
 		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
-		<td><font color="white">&nbsp;&nbsp;&nbsp;FILE&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">WEAKNESSES</font></td>
 		<td><font color="white">&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;</font></td>
 	</tr>
 
 	<tr align="center" class="odd">
-		<td>FreeTDS</td>
-		<td><a href="">/src/pool/member.c</a></td>
-		<td></td>	
+		<td><a href="https://github.com/FreeTDS/freetds/pull/354">FreeTDS</a></td>
+		<td>15</td>
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
-		<td>Expat</td>
-		<td><a href="">/src/pool/member.c</a></td>
-		<td></td>	
+		<td><a href="https://github.com/libexpat/libexpat/pull/406">Expat</a></td>
+		<td>1</td>
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
-		<td>FVWM3</td>
-		<td><a href="">/src/pool/member.c</a></td>
-		<td></td>	
+		<td><a href="https://github.com/fvwmorg/fvwm3/pull/156">FVWM3</a></td>
+		<td>1</td>
+		<td>FIXED</td>	
 	</tr>
 	<tr align="center" class="odd">
-		<td>LibPNG</td>
-		<td><a href="">/src/pool/member.c</a></td>
-		<td></td>	
+		<td><a href="https://github.com/glennrp/libpng/pull/340">LibPNG</a></td>
+		<td>1</td>
+		<td>OPEN</td>	
 	</tr>
 	<tr align="center" class="odd">
-		<td>LibPNG</td>
-		<td><a href="">/src/pool/member.c</a></td>
-		<td></td>	
+		<td><a href="https://github.com/glennrp/libpng/pull/339">LibPNG</a></td>
+		<td>1</td>
+		<td>OPEN</td>	
 	</tr>
 	<tr align="center" class="odd">
-		<td>LibPNG</td>
-		<td><a href="">/src/pool/member.c</a></td>
-		<td></td>	
+		<td><a href="https://github.com/glennrp/libpng/pull/338">LibPNG</a></td>
+		<td>1</td>
+		<td>OPEN</td>
+	</tr>
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/memcached/memcached/pull/710">Memcached</a></td>
+		<td>6</td>
+		<td>OPEN</td>
+	</tr>
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/google/neper/pull/21">GOOGLE - Nepper</a></td>
+		<td>1</td>
+		<td>OPEN</td>
+	</tr>	
+</table>
+
+<p><b>Pull Requests / Cppcheck</b><br>
+
+<table class="blueTable" cellspacing="0" cellpadding="0">
+	<tr align="center" bgcolor="black">
+		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">WEAKNESSES</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;</font></td>
+	</tr>
+
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/microsoft/git/pull/259">MICROSOFT - Git</a></td>
+		<td>1</td>
+		<td>ACCEPTED</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/apple/swift-corelibs-foundation/pull/2766">APPLE - Swift</a></td>
+		<td>1</td>
+		<td>FIXED</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/apache/trafficserver/pull/6630">APPACHE - Traffic Server</a></td>
+		<td>2</td>
+		<td>FIXED</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/fvwmorg/fvwm3/pull/43">FVWM3</a></td>
+		<td>1</td>
+		<td>FIXED</td>	
+	</tr>
+</table>
+
+<p><b>Pull Requests / Compilation errors</b><br>
+
+<table class="blueTable" cellspacing="0" cellpadding="0">
+	<tr align="center" bgcolor="black">
+		<td><font color="white">&nbsp;&nbsp;&nbsp;PROJECT&nbsp;&nbsp;&nbsp;</font></td>
+		<td><font color="white">WEAKNESSES</font></td>
+		<td><font color="white">&nbsp;&nbsp;&nbsp;STATUS&nbsp;&nbsp;&nbsp;</font></td>
+	</tr>
+
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/libgd/libgd/pull/568">LibGD</a></td>
+		<td>2</td>
+		<td>FIXED</td>	
+	</tr>
+	<tr align="center" class="odd">
+		<td><a href="https://github.com/libgd/libgd/pull/562">LibGD</a></td>
+		<td>1</td>
+		<td>FIXED</td>	
 	</tr>
 </table>
 
